--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@ footer p {
         font-size: 1rem;
     }
 }
-a {
+/* a {
     margin: 10px;
      font-size: 24px;
    color: #333;
@@ -157,4 +157,4 @@ a {
     color: #007bff;
     
   }
-  
+   */
