--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1050,31 +1050,9 @@
 
 /* adding */
 
-.portfolio-container {
-  display: flex;
-  justify-content: space-between; /* Adds space between the items */
-  /* gap: 20px;  */
+.last-img {
+  margin-left: 15px;
 }
-
-.portfolio-item {
-  /* flex: 1; */
-  max-width: 30%; 
-}
-
-/* .portfolio-content {
-  position: relative;
-  text-align: center;
-} */
-
-/* .portfolio-info {
-  margin-top: 10px;
-} */
-
-/* .img-fluid {
-  width: 100%;
-  height: auto;
-  display: block;
-} */
 
 
   
